# pharmacorum

./: .dockerignore  .flake8  .gitignore  README.md  compose.yaml  conftest.py  dockerfile  gunicorn.conf.py  manage.py  pyproject.toml  pytest.ini
backend/authentication/: forms.py  service.py  urls.py  views.py
backend/authentication/tests/: test_views.py
backend/backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/brands/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/brands/migrations/: 0001_initial.py
backend/brands/tests/: test_views.py
backend/pharmacorum/: asgi.py  settings.py  urls.py  wsgi.py
backend/product/: admin.py  models.py  service.py  urls.py  views.py
backend/products/: admin.py  apps.py  forms.py  models.py  serializers.py  services.py  urls.py  views.py
backend/products/migrations/: 0001_initial.py  0002_alter_product_types.py  0003_alter_product_options.py
backend/products/tests/: test_views.py
backend/users/: admin.py  serializers.py  service.py  urls.py  views.py
backend/users/tests/: test_users_views.py  test_views.py
frontend/: .dockerignore  .env  .eslintrc.cjs  .gitignore  README.md  dockerfile  index.html  package-lock.json  package.json  pretter.config.js  prettier.config.js  vite.config.js  vitest.config.js
frontend/configs/: env.js
frontend/src/: App.vue  main.js
frontend/src/api/: axios.js  brands-api.js  handlers.js  index.js  product-api.js  product.js  products-api.js  products.js  sessions-api.js  users-api.js
frontend/src/app/: App.vue  AppLayout.vue  index.js
frontend/src/assets/: main.css
frontend/src/components/: HelloWorld.vue  TheWelcome.vue  (+2 more)
nginx/: default.conf
pharmacorum/: asgi.py  settings.py  urls.py  wsgi.py
product/: admin.py  models.py  serializer.py  service.py  urls.py  views.py
product/migrations/: 0001_initial.py
(+147 files in other folders)
