[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.poetry]
name = "pharmacorum"
version = "0.1.0"
description = ""
authors = ["joaoprocopio <joaovitorcprocopio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.5"
gunicorn = "^20.1.0"
django = "^4.1.6"
django-cors-headers = "^3.13.0"
django-extensions = "^3.2.1"
python-decouple = "^3.7"
pydantic = "^1.10.4"
email-validator = "^1.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-django = "^4.5.2"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.1.0"
model-bakery = "^1.10.1"
faker = "^17.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
